# jadesoriginal

./: 3d_viewer.html  Dockerfile  README.md  alphafold.jl  alphafold_service_simple.jl  alphafold_viewer.html  alphigenome_viewer.html  coordinator.py  deep_search.html  docker-compose.yml  fly.toml  formal_verification_core.py  index.html  package.json  pyproject.toml  replit.md  requirements.txt  services_navigation.html  setup.sh  start.sh
fabric/: __init__.py  fabric_coordinator.py
fabric/binding_glue/: haskell_protocols.hs
fabric/layer0_formal_spec/: JADEDSpec.lean
fabric/layer1_metaprogramming/: core.clj
fabric/layer2_runtime/: julia_core.jl
fabric/layer3_concurrency/: elixir_gateway.ex
fabric/layer4_native/: nim_performance.nim  zig_utils.zig
fabric/layer5_paradigms/: prolog_logic.pl
services/: alphafold_backend.py  data_pipeline.py  external_binaries.py  model_management.py  postprocessing.py
services/clojure-genome/: deps.edn  project.clj
services/clojure-genome/src/: alphagenome_core.clj  genomic_service.clj
services/dart-interface/lib/: main.dart
services/elixir-gateway/: mix.exs
services/elixir-gateway/lib/: alphafold_gateway.ex  application.ex  service_gateway.ex
services/formal_verification/agda_formal_spec/: AgdaFormalSpec.agda  JADEDUniversalVerification.agda
services/haskell-protocol/: cabal.project  protocol-service.cabal
services/haskell-protocol/src/: Main.hs  ProtocolEngine.hs
services/haskell-protocols/: package.yaml
services/haskell-protocols/app/: Main.hs
services/j-stats/: package.json
services/julia-alphafold/: Project.toml
services/nim-gcp/: gcp_client.nimble
services/pharo-viz/: package.json
services/pony-federated/: bundle.json
services/zig-utils/: build.zig  build.zig.zon
static/js/: jaded-quantum-frontend.js
(+47 files in other folders)
