cabal-version: 3.0
name: protocol-service
version: 1.0.0
synopsis: JADED Protocol Engine - Advanced Type Systems and Protocol Specifications
description: 
    Haskell-based protocol specification and type system validation service
    for the JADED multi-language bioinformatics platform.
license: MIT
author: JADED Platform
maintainer: jaded@example.com
category: Bioinformatics
build-type: Simple

executable protocol-service
    main-is: Main.hs
    other-modules: 
        ProtocolEngine,
        TypeSystem,
        CompilerServices,
        BioinformaticsProtocols
    hs-source-dirs: src
    default-language: Haskell2010
    
    build-depends:
        base >= 4.16 && < 5,
        aeson >= 2.0,
        wai >= 3.2,
        warp >= 3.3,
        http-types >= 0.12,
        bytestring >= 0.11,
        text >= 1.2.5,
        containers >= 0.6,
        vector >= 0.12,
        scientific >= 0.3,
        time >= 1.11,
        mtl >= 2.2,
        transformers >= 0.5,
        lens >= 5.1,
        parsec >= 3.1
        
    default-extensions:
        OverloadedStrings,
        DeriveGeneric,
        TypeApplications,
        ScopedTypeVariables,
        GADTs,
        DataKinds,
        TypeFamilies,
        FlexibleInstances,
        FlexibleContexts,
        MultiParamTypeClasses,
        FunctionalDependencies